--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ htmlcov/
 nosetests.xml
 coverage.xml
 
+# Media files
+media/
+
 # Translations
 *.mo
 
@@ -63,4 +66,3 @@ tramp
 
 # Sphinx documentation
 docs/_build/
-
